added todo styling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+getrandom = { version = "0.2.8", features = ["js"] }
 leptos = { version = "0.1.3", features = ["stable"] }
+uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
