--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+console_error_panic_hook = "0.1.7"
+console_log = "0.2.0"
 getrandom = { version = "0.2.8", features = ["js"] }
 leptos = { version = "0.1.3", features = ["stable"] }
+log = "0.4.17"
 uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
