--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ console_error_panic_hook = "0.1.7"
 console_log = "0.2.0"
 getrandom = { version = "0.2.8", features = ["js"] }
 leptos = { version = "0.1.3", features = ["stable"] }
+leptos_meta = { version = "0.1.3", features = ["stable", "csr"] }
 log = "0.4.17"
 uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
