--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-console_error_panic_hook = "0.1.7"
-console_log = "0.2.0"
-getrandom = { version = "0.2.8", features = ["js"] }
+console_error_panic_hook = "^0.1"
+console_log = "^0.2"
+getrandom = { version = "^0.2", features = ["js"] }
 leptos = { version = "0.1.3", features = ["stable"] }
 leptos_meta = { version = "0.1.3", features = ["stable", "csr"] }
-log = "0.4.17"
-uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
+log = "^0.4"
+serde = { version = "^1.0", features = ["derive"] }
+uuid = { version = "^1.2", features = ["v4", "fast-rng"] }
