--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,7 @@ getrandom = { version = "^0.2", features = ["js"] }
 leptos = { version = "0.1.3", features = ["stable"] }
 leptos_meta = { version = "0.1.3", features = ["stable", "csr"] }
 log = "^0.4"
+ron = "^0.8"
 serde = { version = "^1.0", features = ["derive"] }
 uuid = { version = "^1.2", features = ["v4", "fast-rng"] }
+web-sys = { version = "^0.3", features = ["Storage"] }
